EP-0007 Commit-03